--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
     </div>
 <center>
     <!-- Home Section -->
-    <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">John Doe</span>
+    <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">Shivam Sahu</span>
         <div class="center">
             <div>
                 <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
             </div>
             <br/>
             <span style="display: inline;" >I am into <span class="animated-text"
-                data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                data-words="Competitive Programming, , Computer Science Engineering, Web Development, Open Source, Mentoring"></span>
             </span>
             <div>
                 <div class="social-icons">
