--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <br/>
             <span style="display: inline;" >I am into <span class="animated-text"
-                data-words="Competitive Programming, , Computer Science Engineering, Web Development, Open Source, Mentoring"></span>
+                data-words="Competitive Programming, Computer Science Engineering, Web Development, Open Source, Mentoring"></span>
             </span>
             <div>
                 <div class="social-icons">
