--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div>
                 <div class="social-icons">
 
-                    <a class="socialicon twitter" href="" target="_blank" rel="author">
+                    <a class="socialicon twitter" href="https://twitter.com/ShivamS87093943" target="_blank" rel="author">
                         <!-- SVG code for twitter icon -->
                         <svg class="twitter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" enable-background="new 0 0 500 500"
@@ -157,7 +157,7 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon dribbble" href="" target="_blank" rel="author">
+                    <a class="socialicon dribbble" href="https://dribbble.com/supershivam503" target="_blank" rel="author">
                         <svg class="dribbble-icon" viewBox="0 0 256 256" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
                         <g>
@@ -168,7 +168,7 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon linkedin" href="" target="_blank" rel="author">
+                    <a class="socialicon linkedin" href="https://www.linkedin.com/in/shivam-sahu-503/" target="_blank" rel="author">
                         <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="35" viewBox="0 0 24 24" fill="#0e76a8"
                             stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
@@ -181,7 +181,7 @@
                         <i class="fab fa-medium-m"></i>
                     </a>
 
-                    <a class="socialicon codeforces" href="" target="_blank" rel="author">
+                    <a class="socialicon codeforces" href="https://codeforces.com/profile/supershivam503" target="_blank" rel="author">
                         <svg class="codeforces-icon" xmlns="http://www.w3.org/2000/svg" viewBox="5 0 14 19" width="100" height="100">
                             <g>
                                 <rect class="red" x="15" width="2" height="6.5" rx="0.7" y="0" fill="#AE0F0A" />
