--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon medium" href="" target="_blank" rel="author">
+                    <a class="socialicon medium" href="https://medium.com/@xtylishshivam13" target="_blank" rel="author">
                         <i class="fab fa-medium-m"></i>
                     </a>
 
@@ -195,7 +195,7 @@
                         <i class="fab fa-kaggle"></i>
                     </a>
 
-                    <a class="socialicon instagram" href="" target="_blank" rel="author">
+                    <a class="socialicon instagram" href="https://www.instagram.com/superb_shivam13/" target="_blank" rel="author">
                         <!-- svg code for instagram icon -->
                         <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
                             <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
