--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                         </svg>
                     </a>
                     
-                    <a class="socialicon kaggle" href="" target="_blank" rel="author">
+<!--                     <a class="socialicon kaggle" href="" target="_blank" rel="author">
                         <i class="fab fa-kaggle"></i>
-                    </a>
+                    </a> -->
 
                     <a class="socialicon instagram" href="https://www.instagram.com/superb_shivam13/" target="_blank" rel="author">
                         <!-- svg code for instagram icon -->
@@ -206,7 +206,7 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon github" href="" target="_blank" rel="author">
+                    <a class="socialicon github" href="https://github.com/supershivam13/" target="_blank" rel="author">
                         <!-- SVG code for Github icon -->
                         <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                             <!-- body -->
