--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">Shivam Sahu</span>
         <div class="center">
             <div>
-                <img src="./assets/images/sahushivam.svg" alt="" class="rounded-circle" height="200" width="200">
+                <img src="./assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
             </div>
             <br/>
             <span style="display: inline;" >I am into <span class="animated-text"
