--- a/education.html
+++ b/education.html
@@ -320,10 +320,10 @@
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
             <h4>Graduation</h4>
             <div class="qual">
-              <h6><em>Massachusetts institute of technology</em></h6>
+              <h6><em>Indian Institute of Technology Patna</em></h6>
               <h6><em>B.Tech Computer Science</em></h6>
-              <h6><em>2017-2021</em></h6></div>
-            <p><i>Activities-</i> Sports, House Captain, Debate Club, Tech Society</p>
+              <h6><em>2019-2023</em></h6></div>
+            <p><i>Activities-</i> Secretary, Students' Technical Council</p>
             <p>
               An investment in knowledge always pays the best interest.
             </p>
@@ -336,12 +336,12 @@
             <img src="assets/images/education-page/education.png" alt="education.png">
           </div>
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-            <h4>High School</h4>
+            <h4>Intermediate School</h4>
             <div class="qual">
-              <h6><em>Delhi Public School</em></h6>
+              <h6><em>R. N. Tagore Senior Secondary School</em></h6>
               <h6><em>High School</em></h6>
-              <h6><em>2015-2017</em></h6></div>
-            <p><i>Activities-</i> Sports, House Captain, Debate Club, Tech Society</p>
+              <h6><em>2016-2018</em></h6></div>
+            <p><i>Activities-</i> Sports, Debate Club, Tech Society</p>
             <p>An investment in knowledge always pays the best interest.</p>
         </div>
       </div>
