--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 
 <head>
-  <title>John Doe | Education</title>
+  <title>Shivam Sahu| Education</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
@@ -296,7 +296,7 @@
       <h1 class="head" data-aos="fade-up" data-aos-delay="300">Education</h1>
     </div>
       <!-- CARDS -->
-      <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
+      <!-- <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
         <div class="row">
           <div class="col-xl-6 col-md-6 col-sm-12">
             <img src="assets/images/education-page/education.png" alt="education.png">
@@ -311,7 +311,7 @@
             <p>An investment in knowledge always pays the best interest.</p>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="card mb-5" data-aos="fade-right" data-aos-delay="500">
         <div class="row">
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
@@ -323,10 +323,11 @@
               <h6><em>Indian Institute of Technology Patna</em></h6>
               <h6><em>B.Tech Computer Science</em></h6>
               <h6><em>2019-2023</em></h6></div>
-            <p><i>Activities-</i> Secretary, Students' Technical Council</p>
-            <p>
-              An investment in knowledge always pays the best interest.
-            </p>
+              <p>
+                Currently Pursuing
+              </p>
+            <p><i>Activities-</i> Secretary, Students' Technical Council<br>Sub-Cord, Web and App Committee</p>
+            
           </div>
         </div>
       </div>
@@ -339,10 +340,10 @@
             <h4>Intermediate School</h4>
             <div class="qual">
               <h6><em>R. N. Tagore Senior Secondary School</em></h6>
-              <h6><em>High School</em></h6>
+              <h6><em>PCM</em></h6>
               <h6><em>2016-2018</em></h6></div>
-            <p><i>Activities-</i> Sports, Debate Club, Tech Society</p>
-            <p>An investment in knowledge always pays the best interest.</p>
+              <p>Percentage - 92.4</p>
+          <p><i>Activities-</i> Sports, Debate Club, Tech Society</p>
         </div>
       </div>
     </div>
@@ -352,13 +353,13 @@
           <img src="assets/images/education-page/education.png" alt="education.png">
         </div>
         <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-          <h4>Elementary School</h4>
+          <h4>High School</h4>
           <div class="qual">
-            <h6><em>Joyride</em></h6>
-            <h6><em>Pre-Primary</em></h6>
-            <h6><em>2002-2015</em></h6></div>
-            <p><i>Activities-</i> Sports, House Captain, Debate Club, Tech Society</p>
-          <p>An investment in knowledge always pays the best interest.</p>
+            <h6><em>R. N. Tagore Senior Secondary School</em></h6>
+            <h6><em>Science</em></h6>
+            <h6><em>2014-2016</em></h6></div>
+            <p>CGPA - 10/10</p>
+          <p><i>Activities-</i> Class Monitor, Debate Club, Sports</p>
       </div>
     </div>
   </div>
