--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                         </svg>
                     </a>
                     
-<!--                     <a class="socialicon kaggle" href="" target="_blank" rel="author">
-                        <i class="fab fa-kaggle"></i>
+                    <!-- <a class="socialicon youtube" href="" target="_blank" rel="author">
+                        <i class="fab fa-youtube"></i>
                     </a> -->
 
                     <a class="socialicon instagram" href="https://www.instagram.com/superb_shivam13/" target="_blank" rel="author">
