--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 
 <head>
-  <title>John Doe | Experience</title>
+  <title>Shivam Sahu | Experience</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
@@ -203,7 +203,7 @@
       <!-- Dynamic volunteership Card -->
     </main>
 
-    <h4 class="text-center heading1">Mentorship</h4>
+    <!-- <h4 class="text-center heading1">Mentorship</h4> -->
 
     <!-- Mentorship Card -->
 
