--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
-    <title>John Doe | Projects</title>
+    <title>Shivam Sahu | Projects</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -318,8 +318,8 @@
                 class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s"
               >
                 My projects makes use of vast variety of latest technology
-                tools. My best experience is to create Data Science projects and
-                deploy them to web applications using cloud infrastructure.
+                tools. My best experience is to create Shortest Routes Visualizer project and
+                deploy them to web applications using Streamlit.
               </p>
             </div>
           </div>
