--- a/experience.html
+++ b/experience.html
@@ -187,7 +187,7 @@
       </div>
     </section>
 
-    <h4 class="text-center exp-head heading1">Work Experience</h4>
+    <h4 class="text-center exp-head heading1">Experience</h4>
 
     <!-- work experience Card -->
 
