--- a/index.html
+++ b/index.html
@@ -224,6 +224,18 @@
             </div>
         </div>
     </div>
+
+    <div>
+        <form action="POST" data-netlify="true" style="display:none">
+            <input type="text" name="field1" placeholder="Your Name" />
+            <input type="email" name="field2" placeholder="Email Address" />
+            <textarea name="field3" placeholder="Type your Message"></textarea>
+            <div class="field">
+            <div data-netlify-recaptcha="true"></div>
+            </div>
+            <input type="submit" value="Send" />
+          </form>
+    </div>
 </center>
     
     
