--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </div>
 
     <div>
-        <form action="POST" data-netlify="true" style="display:none">
+        <form action="POST" data-netlify="true">
             <input type="text" name="field1" placeholder="Your Name" />
             <input type="email" name="field2" placeholder="Email Address" />
             <textarea name="field3" placeholder="Type your Message"></textarea>
