--- a/index.html
+++ b/index.html
@@ -226,13 +226,18 @@
     </div>
 
     <div>
-        <form name="contact" action="POST" data-netlify="true">
-            <input type="text" name="field1" placeholder="Your Name" />
-            <input type="email" name="field2" placeholder="Email Address" />
-            <textarea name="field3" placeholder="Type your Message"></textarea>
-            <input type="submit" value="Send" />
-          </form>
-    </div>
+        <form
+          name="contact"
+          method="POST"
+          data-netlify="true"
+          style="display: none"
+        >
+          <input type="text" name="name" placeholder="Your Name" />
+          <input type="email" name="email" placeholder="Email Address" />
+          <textarea name="message" placeholder="Type your Message"></textarea>
+          <input type="submit" value="Send" />
+        </form>
+      </div>
 </center>
     
     
